[gd_scene load_steps=9 format=3 uid="uid://c5uuxy5ktjfvy"]

[ext_resource type="PhysicsMaterial" uid="uid://b47bqk7afek53" path="res://house_yaga_space/content/physics_material/physics_material_rocket.tres" id="1_pdj0q"]
[ext_resource type="Script" path="res://house_yaga_space/content/rocket_house/rocket_house.gd" id="2_nbev0"]
[ext_resource type="PackedScene" uid="uid://dohsm2tkfhj3m" path="res://house_yaga_space/content/rocket_engine/trust_rocket.tscn" id="3_fcf42"]
[ext_resource type="Texture2D" uid="uid://e7o37s81yh28" path="res://house_yaga_space/resource/assets_red/house_2.png" id="4_tvco2"]
[ext_resource type="Texture2D" uid="uid://oly5pcyrdlk8" path="res://kenney_assets/cursor_default/cursor_default.sprites/cursor_default/navigation_e.tres" id="6_t0i11"]
[ext_resource type="PackedScene" uid="uid://bjap7qq5o5np" path="res://house_yaga_space/content/turret/turret.tscn" id="11_w5s0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnwjx"]
size = Vector2(384, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_066gm"]
size = Vector2(80, 72)

[node name="RocketHouse" type="RigidBody2D"]
position = Vector2(568, 504)
collision_layer = 2
physics_material_override = ExtResource("1_pdj0q")
freeze = true
script = ExtResource("2_nbev0")
max_health = 300.0

[node name="Trusters" type="Node2D" parent="."]

[node name="LeftTruster" type="Node2D" parent="Trusters"]
unique_name_in_owner = true

[node name="TrustRocket" parent="Trusters/LeftTruster" instance=ExtResource("3_fcf42")]
position = Vector2(-200, 152)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="TrustRocket2" parent="Trusters/LeftTruster" instance=ExtResource("3_fcf42")]
position = Vector2(120, -208)
rotation = 4.71239
scale = Vector2(0.5, 0.5)

[node name="RightTruster" type="Node2D" parent="Trusters"]
unique_name_in_owner = true

[node name="TrustRocket3" parent="Trusters/RightTruster" instance=ExtResource("3_fcf42")]
position = Vector2(-120, -208)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="TrustRocket4" parent="Trusters/RightTruster" instance=ExtResource("3_fcf42")]
position = Vector2(201, 151)
rotation = 4.71239
scale = Vector2(0.5, 0.5)

[node name="HouseVisual" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="HouseVisual"]
scale = Vector2(8, 8)
texture = ExtResource("4_tvco2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -96)
polygon = PackedVector2Array(0, -96, -192, 24, 192, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 48)
shape = SubResource("RectangleShape2D_rnwjx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 204)
shape = SubResource("RectangleShape2D_066gm")

[node name="Rockets" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Area2DHitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2DHitBox"]
polygon = PackedVector2Array(0, -192, -192, -72, -192, 168, -40, 168, -40, 240, 40, 240, 40, 168, 192, 168, 192, -72)

[node name="Turrets" type="Node2D" parent="."]

[node name="Turret" parent="Turrets" instance=ExtResource("11_w5s0h")]
position = Vector2(-168, -64)

[node name="Turret2" parent="Turrets" instance=ExtResource("11_w5s0h")]
position = Vector2(160, -64)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Cursor" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Cursor"]
position = Vector2(776, 0)
scale = Vector2(2, 2)
texture = ExtResource("6_t0i11")
